# TCC-PUCSP

2.0-Previsao-StockMarket/: app.ipynb
Previsao-StockMarket/: app.ipynb
dump/bloom/blpapi_cpp_3.23.2.1/doc/: ChangeLog.txt
examples-previsao-noticias/: .gitattributes  .gitignore  LICENSE  README.md
examples-previsao-noticias/V0/: data_exit.csv  data_sentimento_final.csv  merged.csv  model_1.ipynb  model_2.ipynb  output.csv  output_deberta.csv  retrainModel_1.ipynb  separar.py
examples-previsao-noticias/V0/data/: Petrobras_noticias.json
examples-previsao-noticias/V0/general/: app.py  data_negativos.csv  data_positivos.csv
examples-previsao-noticias/V0/merge/: banco_brasil.json  tempCodeRunnerFile.py  testingmodel.py  wordbank_mine.py
examples-previsao-noticias/dump/API-news/: app.py  app2.py
examples-previsao-noticias/dump/bloom/: BLOOMBERG.py
examples-previsao-noticias/dump/bloom/blpapi_cpp_3.23.2.1/examples/demoapps/: ApiFieldsExample.cpp  CMakeLists.txt  ContributionsExample.cpp  GenerateTokenExample.cpp  MultipleRequestsOverrideExample.cpp  README.md  RequestResponseExample.cpp  RequestServiceConsumerExample.cpp  SecurityLookupExample.cpp  SubscriptionWithEventPollingExample.cpp
examples-previsao-noticias/dump/bloom/blpapi_cpp_3.23.2.1/examples/demoapps/snippets/apiflds/: CategorizedFieldSearchRequests.h  FieldListRequests.h
examples-previsao-noticias/dump/bloom/blpapi_cpp_3.23.2.1/examples/demoapps/snippets/instruments/: CurveListRequests.h  GovtListRequests.h
examples-previsao-noticias/dump/bloom/blpapi_cpp_3.23.2.1/examples/demoapps/snippets/requestresponse/: HistoricalDataRequests.h  IntradayTickRequests.h  ReferenceDataRequests.h
examples-previsao-noticias/dump/bloom/blpapi_cpp_3.23.2.1/examples/demoapps/util/: ConnectionAndAuthOptions.h  Utils.h
examples-previsao-noticias/examples-previsao-noticias/V0/: app.py  model_2.ipynb  mylex.py  output_deberta.csv  retrainModel_1.ipynb  tokenizer.json  use_model_1.ipynb
examples-previsao-noticias/examples-previsao-noticias/new-articles-classifier/: output_results.csv
examples-previsao-noticias/examples-previsao-noticias/news-brazil/: app.ipynb
examples-previsao-noticias/new-articles-classifier/: app.ipynb
examples-previsao-noticias/news-brazil/: noticias.csv  output_results.csv
examples-previsao-stocks/2.0-Previsao-StockMarket/: app.ipynb
examples-previsao-stocks/Previsao-StockMarket/: app.ipynb
(+739 files in other folders)
